Update 1.3 Check that during joke upload the title and content is populated Show progress bar during initialization

--- a/Hindi Jokes/Hindi Jokes.Windows/Hindi Jokes.Windows.csproj
+++ b/Hindi Jokes/Hindi Jokes.Windows/Hindi Jokes.Windows.csproj
@@ -175,15 +175,15 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="HanuDowsFramework">
-      <HintPath>..\..\..\HanuDowsFramework\HanuDowsFramework\bin\Release\HanuDowsFramework.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\HindiJokes_BackgroundTasks\HindiJokes_BackgroundTasks.csproj">
       <Project>{1eb1f095-4efb-48fa-8839-837a8f4279bd}</Project>
       <Name>HindiJokes_BackgroundTasks</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="HanuDowsFramework">
+      <HintPath>..\..\..\HanuDows-Framework\HanuDowsFramework\bin\Release\HanuDowsFramework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
