--- a/HindiJokes_BackgroundTasks/HindiJokes_BackgroundTasks.csproj
+++ b/HindiJokes_BackgroundTasks/HindiJokes_BackgroundTasks.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="HanuDowsFramework">
-      <HintPath>..\..\HanuDowsFramework\HanuDowsFramework\bin\Release\HanuDowsFramework.dll</HintPath>
+      <HintPath>..\..\HanuDows-Framework\HanuDowsFramework\bin\Release\HanuDowsFramework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
