--- a/Hindi Jokes/Hindi Jokes.WindowsPhone/Hindi Jokes.WindowsPhone.csproj
+++ b/Hindi Jokes/Hindi Jokes.WindowsPhone/Hindi Jokes.WindowsPhone.csproj
@@ -85,18 +85,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <SDKReference Include="Microsoft.AdMediator81, Version=1.0">
-      <Name>Ad Mediator SDK for Windows Phone 8.1 XAML</Name>
-    </SDKReference>
-    <SDKReference Include="Microsoft.VCLibs, version=12.0">
-      <Name>Microsoft Visual C++ 2013 Runtime Package for Windows Phone</Name>
-    </SDKReference>
-    <SDKReference Include="SQLite.WP81, Version=3.14.2">
-      <Name>SQLite for Windows Phone 8.1 %28SQLite.WP81, Version=3.14.2%29</Name>
-    </SDKReference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="HTMLDisplayPage.xaml.cs">
       <DependentUpon>HTMLDisplayPage.xaml</DependentUpon>
     </Compile>
@@ -130,6 +118,7 @@
     <Content Include="Assets\WideLogo.scale-100.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
     <None Include="Package.StoreAssociation.xml" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="HTMLDisplayPage.xaml">
@@ -146,17 +135,30 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\HindiJokes_BackgroundTasks\HindiJokes_BackgroundTasks.csproj">
       <Project>{1eb1f095-4efb-48fa-8839-837a8f4279bd}</Project>
       <Name>HindiJokes_BackgroundTasks</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="HanuDowsFramework">
+    <SDKReference Include="Microsoft.AdMediator81, Version=1.0">
+      <Name>Ad Mediator SDK for Windows Phone 8.1 XAML</Name>
+    </SDKReference>
+    <SDKReference Include="Microsoft.VCLibs, Version=12.0">
+      <Name>Microsoft Visual C++ 2013 Runtime Package for Windows Phone</Name>
+    </SDKReference>
+    <SDKReference Include="SQLite.WP81, Version=3.14.2">
+      <Name>SQLite for Windows Phone 8.1 %28SQLite.WP81, Version=3.14.2%29</Name>
+    </SDKReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="HanuDowsFramework, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\HanuDows-Framework\HanuDowsFramework\bin\Release\HanuDowsFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCL, Version=3.8.7.2, Culture=neutral, PublicKeyToken=bddade01e9c850c5, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\SQLitePCL.3.8.7.2\lib\wpa81\SQLitePCL.dll</HintPath>
+      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
