--- a/Hindi-Jokes/Hindi-Jokes.csproj
+++ b/Hindi-Jokes/Hindi-Jokes.csproj
@@ -135,6 +135,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="analytics.xml" />
     <Content Include="Assets\BigLogo.scale-100.png" />
     <Content Include="Assets\BigLogo.scale-200.png" />
     <Content Include="Assets\BigLogo.scale-400.png" />
@@ -215,8 +216,8 @@
     <SDKReference Include="Microsoft.VCLibs, Version=14.0">
       <Name>Visual C++ 2015 Runtime for Universal Windows Platform Apps</Name>
     </SDKReference>
-    <SDKReference Include="SQLite.UWP.2015, Version=3.14.2">
-      <Name>SQLite for Universal Windows Platform</Name>
+    <SDKReference Include="SQLite.UWP.2015, Version=3.15.1">
+      <Name>SQLite for Universal Windows Platform %28SQLite.UWP.2015, Version=3.15.1%29</Name>
     </SDKReference>
   </ItemGroup>
   <ItemGroup>
