--- a/HindiJokes_BackgroundTasks/HindiJokes_BackgroundTasks.csproj
+++ b/HindiJokes_BackgroundTasks/HindiJokes_BackgroundTasks.csproj
@@ -112,7 +112,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="HanuDowsFramework">
+    <Reference Include="HanuDowsFramework, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\HanuDows-Framework\HanuDowsFramework\bin\Release\HanuDowsFramework.dll</HintPath>
     </Reference>
   </ItemGroup>
